Change Log:


**5/12/15**
- Fixed error that prevented Kridershot+Meticulous Bolts from calculating properly
- Fixed error that was causing Health Globes to not be included in simulation
- Added paragon points, weapon +damage and jewelry +damage to Stat calculator

**5/11/15**
* Reworked special items and sets in user interface (items now selected by slot)
* Removed Odyssey's End uptime. 
-- Instead, if Odyssey's End is equipped and Entangling shot is selected as a skill, the simulation will make sure ES is fired whenever the buff is about to fall off
* Fixed import of Odyssey's End buff percent from profile
* It should now be easier to type values into numeric spinner fields (they will only validate on keypress when exceeding max value, or when enter/leaving focus)

**5/8/15**
- Convention of Elements' damage buff is now discrete for each elemental damage type (as opposed to averaged across all 4 elements). It now cycles through each element every 4 seconds.

**5/7/15**
- Now parses all Legendary gems in Jewelry and displays 3 drop-downs for selecting up to 3 Gems to be used
-- Note: Not all Gem mechanics are implemented (e.g. Mirinae and Wreath of Lightning are still on the to-do list)
- Added Simplicity's Strength legendary gem mechanics
- Added Holy elemental damage type (in preparation for Mirinae gem)

**5/6/15**
- Fixed Wolf Howl/BotP (BotP was triggering Wolf buff; copy & paste error!)
- Updated Damage Log for Elemental Arrow/Ball Lightning to show multiplier (based on target size and Meticulous Bolts %)
- Re-enabled Caltrops 
- Re-enabled Spike Traps
- Fixed reset of Gogok level when changing # of Gogok stacks
- Removed duplicate fields from DPS/Break Point Calculator dialog (it is still updated in real time from main screen)
- Fixed APS calculation (in damage log) to include other player buffs that affect IAS (only if uptime = 100%)
- Fixed display of Average Weapon Damage to account for +damage on Jewelry
- Added Wizard Slow Time Buffs

**5/5/15**