@@ -28,8 +28,8 @@ public class Version  implements Serializable {
 
 	public static final String PREFIX = "Version:";
 	
-	public static String VERSION = "2.2-150512.02";
-	public static String VERSION_DATE = "05/12/2015";
+	public static String VERSION = "2.2-150514.01";
+	public static String VERSION_DATE = "05/14/2015";
 	
 	public String version;
 	
